Definimos configuraciones para Discovery Server y Servidor de configuracion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+# Definimos nombre de la aplicación
+spring.application.name=product-microservice
+#Escoge un puerto aleatorio
+server.port=0
 
+#Configuracion de Eureka 1. id de la instancia
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+#Servidor de Configuracion 1. Escogemos el perfil de configuracion
+spring.cloud.config.profile=dev
