--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,1 +1,26 @@
+#url de servidor de configuración
 spring.cloud.config.uri=http://localhost:8888
+
+# Habilitar el acceso a los endpoints de actuator
+management.endpoints.web.exposure.include=*
+
+# Definimos nombre de la aplicación
+spring.application.name=product-microservice
+#Escoge un puerto aleatorio
+server.port=0
+
+#Configuracion de Eureka 1. id de la instancia
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
+#Servidor de Configuracion 1. Escogemos el perfil de configuracion
+spring.cloud.config.profile=dev
+
+
+# Vault configurations
+#nombre de la aplicación para vault
+spring.cloud.vault.application-name=booking-microservice
+spring.cloud.vault.host=localhost
+spring.cloud.vault.port=8200
+spring.cloud.vault.scheme=http
+spring.cloud.vault.authentication=TOKEN
+spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
