--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -18,9 +18,16 @@ spring.cloud.config.profile=dev
 
 # Vault configurations
 #nombre de la aplicación para vault
-spring.cloud.vault.application-name=booking-microservice
+spring.cloud.vault.application-name=product-microservice
 spring.cloud.vault.host=localhost
 spring.cloud.vault.port=8200
 spring.cloud.vault.scheme=http
 spring.cloud.vault.authentication=TOKEN
 spring.cloud.vault.token=00000000-0000-0000-0000-000000000000
+
+#Configuración de Spring Cloud Bus
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
