--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.5'
     implementation 'org.springframework.cloud:spring-cloud-starter-vault-config:3.1.1'
     implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp:3.1.2'
+    implementation 'org.springframework.security:spring-security-oauth2-resource-server:5.7.3'
+    implementation 'org.springframework.security:spring-security-oauth2-jose:5.7.3'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.7.5'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
