--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -31,3 +31,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+#Configuración de Seguridad
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:9090/realms/microservices-realm
+
